# convoy

./: Cargo.toml  README.md
migrations/: 0001_create_users_table.sql  0002_create_message_table.sql  0004_encrypt_messages.sql
src/: auth.rs  crypto.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs
static/: admin.html  index.html
