[package]
name = "convoy"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web="4"
tokio = { version = "1.45.1", features = ["full"]}
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "time"] }
time = {version = "0.3.41", features = ["serde"]}
bcrypt = "0.17.0"
anyhow = "1.0.98"
thiserror = "2.0.12"
actix-cors = "0.7.1"
sqlx-cli = "0.8.6"
pkg-config = "0.3.32"
base64 = "0.22.1"
actix-files = "0.6.6"
aes-gcm = "0.10.3"
rand = "0.9.1"
hex = "0.4.3"